--- a/BOZ_App/resources/css/app.css
+++ b/BOZ_App/resources/css/app.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+#nav-toggle:checked ~ nav {
+    display: block;
+}
