--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -632,6 +632,9 @@ select {
 .m-2 {
   margin: 0.5rem;
 }
+.m-auto {
+  margin: auto;
+}
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -718,14 +721,11 @@ select {
 .mt-0 {
   margin-top: 0px;
 }
-.mt-20 {
-  margin-top: 5rem;
+.mt-16 {
+  margin-top: 4rem;
 }
 .mt-6 {
   margin-top: 1.5rem;
-}
-.mt-16 {
-  margin-top: 4rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -862,9 +862,6 @@ select {
 }
 .justify-between {
   justify-content: space-between;
-}
-.gap-2 {
-  gap: 0.5rem;
 }
 .gap-3 {
   gap: 0.75rem;
@@ -1039,6 +1036,9 @@ select {
 .pt-10 {
   padding-top: 2.5rem;
 }
+.pt-3 {
+  padding-top: 0.75rem;
+}
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1048,17 +1048,14 @@ select {
 .pt-6 {
   padding-top: 1.5rem;
 }
-.pt-2 {
-  padding-top: 0.5rem;
-}
-.pt-3 {
-  padding-top: 0.75rem;
-}
 .text-center {
   text-align: center;
 }
 .text-justify {
   text-align: justify;
+}
+.align-middle {
+  vertical-align: middle;
 }
 .font-sans {
   font-family: Raleway, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
