--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -678,6 +678,9 @@ select {
 .z-50 {
   z-index: 50;
 }
+.m-3 {
+  margin: 0.75rem;
+}
 .m-0 {
   margin: 0px;
 }
@@ -949,6 +952,9 @@ select {
 .justify-between {
   justify-content: space-between;
 }
+.gap-4 {
+  gap: 1rem;
+}
 .gap-3 {
   gap: 0.75rem;
 }
@@ -1088,14 +1094,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
 .bg-opacity-30 {
   --tw-bg-opacity: 0.3;
 }
@@ -1115,11 +1113,11 @@ select {
 .p-2 {
   padding: 0.5rem;
 }
-.p-3 {
-  padding: 0.75rem;
-}
 .p-6 {
   padding: 1.5rem;
+}
+.p-3 {
+  padding: 0.75rem;
 }
 .p-4 {
   padding: 1rem;
@@ -1166,9 +1164,6 @@ select {
 }
 .pt-10 {
   padding-top: 2.5rem;
-}
-.pt-3 {
-  padding-top: 0.75rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -1791,6 +1786,11 @@ select {
     list-style-type: none;
   }
 
+  .md\:columns-3 {
+    -moz-columns: 3;
+         columns: 3;
+  }
+
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1988,6 +1988,10 @@ select {
 
   .lg\:w-3\/6 {
     width: 50%;
+  }
+
+  .lg\:max-w-container {
+    max-width: 1140px;
   }
 
   .lg\:object-cover {
