--- a/BOZ_App/public/css/media_library.css
+++ b/BOZ_App/public/css/media_library.css
@@ -1,20 +1,1 @@
-.mediumContainer:hover > .deleteMedium{
-    display:flex;
-    cursor: pointer;
-}
-
-.mediumContainer{
-    position: relative;
-}
-
-.deleteMedium{
-    display: none;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(252, 0, 0,0.6);
-    position: absolute;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-}
+.mediumContainer:hover>.deleteMedium{cursor:pointer;display:flex}.mediumContainer{position:relative}.deleteMedium{align-items:center;background-color:rgba(252,0,0,.6);display:none;height:100%;justify-content:center;left:0;position:absolute;top:0;width:100%}
